# murasaki-zygisk-bridge

./: .gitignore  README.md  THANKS.md
.github/workflows/: build.yml
magisk-module/: README.md  module.prop
scripts/: build.sh
userspace/zygisk_murasaki_bridge/: CMakeLists.txt
userspace/zygisk_murasaki_bridge/include/: zygisk.hpp
userspace/zygisk_murasaki_bridge/src/: bridge.cpp  bridge.hpp  module.cpp
